* August 15 2005, Kristian Van Der Vliet *

New Savage driver that supports all S3 Savage chipsets (Although not the mis-named
Via Unichrome "ProSavage" chips)  The driver has been tested on an IX-MV Mobile
Savage and supports acclerated 2D ops.  Video Overlays are only currently supported
on the Mobile Savage chips (IX & MX) pending demand for support on older chipsets.

* August 14 2005, Arno Klenke *

Appserver changes:
	- Make it work with gcc 3.4 and the new glibc
	- Line drawing with DM_BLEND
	- Improved sprite code
	- New shutdown procedure

* July 17 2005, Arno Klenke *

AGP support is now disabled by default

* July 9 2005, Arno Klenke *

Compilation fix for the network drivers
Added new device ids to the pci irq routing table code

* July 6 2005, Arno Klenke *

Fixed aperture detection for i830 and i845 chipsets

* June 1 2005, Arno Klenke *

Set AC97_NR in the i810 audio driver to 1. This is reported to fix problems with some
chipsets.

* May 30 2005, Arno Klenke *

Fixed interrupt handling in the rtl8139 network driver.

* May 18 2005, Kaj de Vos *

Enabled the min/max macros in macros.h for userland C code. They were restricted to
kernel space due to clashing with the C++ standard library, but some C applications
use them.

* May 12 2005, Kaj de Vos *

Generalized the makefiles more. Removed generic hardwired optimization and debug options.
Changed more occurrences of $(CC) to $(CXX). Some rules probably still need to be
differentiated between C and C++.

From now on, please don't hardwire optimization options that aren't specific to your code.
Consult Builder/settings to see which options are used by default globally.

* May 8 2005, Kaj de Vos *

Added Frisian flag to locale preference applet. Enabled several more flags we already had,
except for Russian because it doesn't seem to be the right one. Corrected spelling of
some languages.

---- 0.5.6 Released -------------------------------------------------------------------
