@@ -30,7 +30,8 @@ enum
 	M_GET_SINGLE_CLICK,
 	M_SET_SINGLE_CLICK,
 	M_GET_BACKGROUND,
-	M_SET_BACKGROUND
+	M_SET_BACKGROUND,
+	M_REFRESH
 };
 
 #endif
