@@ -1,3 +1,6 @@
+* Aug 19, 2005, Arno Klenke
+	Added a refresh ipc message to the desktop
+
 * Aug 14, 2005, Arno Klenke
 	*The dock now scans the application directory
 	*Changed orientation in the mixer plugin
@@ -111,5 +114,6 @@
 		* Fixed icon text color problems.
 
 		 
+
 
 
