@@ -24,8 +24,7 @@ objs:
 	mkdir objs
 
 $(OBJDIR)/Next: $(OBJS)
-	$(CXX) $(OBJS) -o $(OBJDIR)/Next ../../../server/objs/appserver -lsyllable -lz
-	$(CXX) -plugin $(OBJS) -o $(OBJDIR)/Next -lsyllable
+	$(CXX) -plugin -Xlinker -Bsymbolic $(OBJS) -nodefaultlibs -o $(OBJDIR)/Next
 
 deps:
 
